# sealmit

./: .gitattributes  .gitignore  ARCHITECTURE.md  DETAILED_DESIGN_BACKEND.md  DETAILED_DESIGN_FRONTEND.md  KNOWLEDGE_BASE.md  README.md  REQUIREMENTS.md  TESTING_STRATEGY.md  verify_ai.py  verify_asig.py  verify_backend.py  verify_e2e.py
backend/: .gitignore  asig_server.py  desktop_app.py  main.py  models.py  pyproject.toml  run_tests.bat  storage.py
backend/api/: ai.py  artifacts.py  projects.py
backend/tests/: conftest.py
backend/tests/integration/: test_artifacts.py  test_projects.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Assistant.css  Assistant.jsx  Layout.css  Layout.jsx
frontend/src/pages/: ProjectDashboard.css  ProjectDashboard.jsx  ProjectList.css  ProjectList.jsx  ProjectSettings.css  ProjectSettings.jsx  RequirementsView.css  RequirementsView.jsx  RiskView.css  RiskView.jsx  VerificationView.css  VerificationView.jsx
frontend/src/tests/integration/: ProjectDashboard.test.jsx
